kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux
spec:
  parentRefs:
    - {name: envoy-internal, namespace: network}
  hostnames:
    - "flux.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
