kubernetes/apps/flux-system/flux-operator/app/cnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-web
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flux-operator
  ingress:
    - fromEntities:
        - cluster
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9080"
              protocol: TCP
